module-5-assessment-1 submission

--- a/style-pages.css
+++ b/style-pages.css
@@ -34,7 +34,7 @@ p.intro{
     width: 100%;  
 }
 
-/*===================== BOTTOM TABS ====================*/
+/*====================== B0TTOM TABS ========================*/
 #tabs-bottom{
     position: fixed;
     bottom: 0;
@@ -47,7 +47,7 @@ p.intro{
     box-shadow: inset 0px 1px 0px 0px #54a3f7;
     background: linear-gradient(#007dc1, #0061a7);
     border-radius: 3px;
-    border: 1px solid #124d77;
+    border: 1px solid #124d77;    
 }
 
 #tabs-bottom a{
@@ -59,6 +59,6 @@ p.intro{
     color: white;
     text-align: center;
     text-decoration: none;
-    text-shadow: 0px 1px 0px white;
-    padding-top: 18px;
+    text-shadow: 0px 1px 0px #154682;
+    padding-top:18px;
 }
